--- a/result/2021-12-23.md
+++ b/result/2021-12-23.md
@@ -72,3 +72,4 @@
 72. [2021你有哪些骄傲时刻](https://s.weibo.com//weibo?q=%232021%E4%BD%A0%E6%9C%89%E5%93%AA%E4%BA%9B%E9%AA%84%E5%82%B2%E6%97%B6%E5%88%BB%23&Refer=top) 53874
 73. [苏州震感](https://s.weibo.com//weibo?q=%E8%8B%8F%E5%B7%9E%E9%9C%87%E6%84%9F&Refer=top) 51946
 74. [无锡震感](https://s.weibo.com//weibo?q=%E6%97%A0%E9%94%A1%E9%9C%87%E6%84%9F&Refer=top) 50856
+75. [河南疫情](https://s.weibo.com//weibo?q=%23%E6%B2%B3%E5%8D%97%E7%96%AB%E6%83%85%23&Refer=top) 23690
